MWVESwitchPopupWidget: Fix alignment by removing margin
Since the PopupWidget rewrite, margins for aligning popup anchors
should be set on the anchor itself, not on the popup.

--- a/modules/ve-mw/init/styles/ve.init.MWVESwitchPopupWidget.css
+++ b/modules/ve-mw/init/styles/ve.init.MWVESwitchPopupWidget.css
@@ -8,7 +8,6 @@
 .ve-init-mw-switchPopupWidget {
 	white-space: normal;
 	z-index: 4;
-	margin-left: 1.25em;
 }
 
 .ve-init-mw-switchPopupWidget .oo-ui-popupWidget-head {
